<resources>
    <string name="app_name">Erawan Thai</string>
    <string name="title_home">Home</string>
    <string name="title_menu">Menu</string>
    <string name="title_cart">Cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_hours_header">Restaurant Hours</string>
    <string name="spice_level">Spice Level</string>
    <string name="mild">mild</string>
    <string name="medium">medium</string>
    <string name="hot">hot</string>
    <string name="thai_hot">thai hot</string>
    <string name="chicken">chicken</string>
    <string name="beef">beef</string>
    <string name="pork">pork</string>
    <string name="prawn">prawn</string>
    <string name="chicken_and_prawn">chicken and prawn</string>
    <string name="vegetarian">vegetarian</string>
    <string name="meat_choice">Meat Choice</string>
    <string name="size">Size</string>
    <string name="fire_pot">fire pot</string>
    <string name="xl_pot">XL pot</string>
    <string name="small_bowl">small bowl</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="quantity">Quantity:</string>
    <string name="erawan_thai_cuisine">Erawan Thai Cuisine</string>
    <string name="cart_total">Total:</string>
    <string name="yelp_data_error">Error fetching Yelp Data</string>
    <string name="google_places_data_error">Error fetching Google Places Data</string>
    <string name="yelp_rating">Yelp Rating:</string>
    <string name="reviews">Review Count:</string>

    <string name="google_api_key">AIzaSyDTYrZzT3Vfa5B0QF5tJzCB9lVq9fpXaIs</string>
    <string name="share_cart_button">share cart</string>
    <string name="erawan_thai_cuisine_logo">Erawan Thai Cuisine Logo</string>
</resources>
